SERVER-6123 Remove unused lockGlobally() implementation in PipelineCommand.